# personal_lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: __init__.py  migrate_folder_counts.py  requirements.txt
backend/app/: __init__.py  cli.py  config.py  db.py  main.py  resources.py  workspace.py
docs/: OPENCLAW_SKILL_INTEGRATION_MANUAL.md  PHASE8_FRONTEND_RUNBOOK.md  REPORT_CENTER_BOSS_BRIEF.md  REPORT_CENTER_LLM_WIKI_V2_DESIGN.md  REPORT_CENTER_MVP_DESIGN.md  SYSTEM_OPERATION_MANUAL.md
docs/base_doc/: WIKI_KNOWLEDGE_BASE_DEV_PLAN.md  claw.md
frontend/: app.js  index.html  styles.css
plan_list/: 00_plan_index.md  01_project_bootstrap_and_contracts.md  02_report_storage_and_sync.md  03_report_read_and_search_api.md  04_wiki_storage_and_indexing.md  05_compile_pipeline.md  06_query_and_writeback.md  07_governance_and_lint.md  08_frontend_and_delivery.md  09_upload_center_mvp_design.md
plan_list/openclaw_report_ingest_prompt/: 00_openclaw_execution_prompt.md
plan_list/report_delete_lifecycle_design/: 00_plan_index.md  01_delete_scope_and_lifecycle.md  02_api_and_schema_upgrade.md  03_backend_delete_flow_and_cleanup.md  04_frontend_delete_entry_and_behavior.md  05_job_runner_audit_and_acceptance.md
plan_list/report_folder_mvp_design/: 00_plan_index.md  01_domain_and_schema.md  02_folder_api_and_backend_rules.md  03_report_and_upload_integration.md  04_frontend_folder_workspace.md  05_drag_drop_and_move_flow.md  06_delivery_and_acceptance.md
plan_list/storage_db_object_storage_preflight_checklist/: 00_preflight_checklist.md
(+79 files in other folders)
